bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: backend
    labels:
        com.docker.compose.project: backend
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: backend
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: backend
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api
                  image: curvvtech-api
                  imagePullPolicy: IfNotPresent
                  command: [node src/server.js]
                  ports:
                    - name: api-4000
                      containerPort: 4000
