bridge/base/mongo-deployment.yaml
#! mongo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
    namespace: backend
    labels:
        com.docker.compose.project: backend
        com.docker.compose.service: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: backend
            com.docker.compose.service: mongo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: backend
                com.docker.compose.service: mongo
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: mongo
                  image: mongo:7
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mongo-27017
                      containerPort: 27017
                  volumeMounts:
                    - name: data-db
                      mountPath: /data/db
            volumes:
                - name: data-db
                  persistentVolumeClaim:
                    claimName: mongo-mongo-data
